# mistral-learn

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  spec.md
agent/: core.py  memory.py  prompts.py  tools.py
custom_tools/: __init__.py
db/: models.py  srs.py
interfaces/: cli.py  web.py
skills/: index.md
skills/language-acquisition/: SKILL.md
skills/spanish/: SKILL.md
skills/teaching-methods/: SKILL.md
soul/: SOUL.md
sources/: README.md  cine-español.txt  pedro-almodovar-wikipedia.txt  premios-goya.txt  rodrigo-sorogoyen-interview.txt  rodrigo-sorogoyen-wikipedia.txt  youtube-2ti_-y0qmna.txt  youtube-lncbcup_ytu.txt
tests/: test_custom_tools.py  test_memory.py  test_prompts.py  test_srs.py  test_tools.py
voice/: elevenlabs.py
