[project]
name = "incontext-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "elevenlabs>=2.37.0",
    "fsrs>=6.3.0",
    "gradio>=6.8.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scrapetube>=2.5.0",
    "prompt-toolkit>=3.0.0",
    "rich>=14.3.3",
    "wikipedia-api>=0.9.0",
    "youtube-transcript-api>=1.2.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
